# logistics-website

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: pyproject.toml
backend/core/: settings.py
backend/logistic/: tasks.py
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  entrypoint.sh  nginx.conf
frontend/: index.html  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/pages/: Home.jsx
frontend/src/styles/: globals.css  header.css  utilities.css
